sgs.tf
#security group details
resource "aws_security_group" "all_traffic" {
  name        = "all_traffic"
  description = "Allow all inbound traffic"
  vpc_id      = aws_vpc.vpc1.id
 
  ingress {
    description      = "traffic from VPC"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = [aws_vpc.vpc1.cidr_block]
  }
 
  ingress {
      from_port   = 80
    to_port       = 80
    protocol      = "tcp"
    cidr_blocks   = ["0.0.0.0/0"]
    }
 
  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }
 
  tags = {
    Name = "tfsg"
    creator = var.creator
  }
}
